# jagguar

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md
.cargo/: config.toml
benches/: shprg_expand.rs  shprg_memory.rs
docs/: mkdocs.yml
docs/content/: index.md  roadmap.md  simulator.md
scripts/parameters/: run.sh  setup_lattice_estimator.sh  shprg.sage  shprg_parameters.json
scripts/plotting/: plot_shprg_memory_overhead.py
src/: lib.rs  main.rs
src/communicator/: communicator.rs  mod.rs
src/crypto/: mod.rs  prg.rs  seed_homomorphic_prg.rs  shamir.rs  util.rs
src/protocols/: mod.rs
src/protocols/base/: client.rs  committee.rs  mod.rs  protocol.rs  server.rs
src/protocols/opa/: client.rs  committee.rs  mod.rs  server.rs
src/simulator/: main.rs  mod.rs  port_pool.rs  simulator.rs
src/util/: packing.rs
