[package]
name = "jagguar"
version = "0.1.0"
edition = "2024"
default-run = "jagguar"

[dependencies]
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-serialize = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
num-bigint = "0.4"
num-traits = "0.2"
socket2 = "0.5"

[[bin]]
name = "simulator"
path = "src/simulator/main.rs"
required-features = ["simulator"]

[features]
default = []
simulator = []
